objects/VLE_Org_Wide_Units_And_Role_Assignments__c.object
<CustomObject><fields>
        <fullName>Available_for_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Org Unit relates to STAFF Only. Either "Is Student" OR "Is Staff" should be selected</description>
        <inlineHelpText>Is this Org Unit relates to Staff Only. Either "Is Student" OR "Is Staff" should be selected</inlineHelpText>
        <label>Available for Staff</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Available_for_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Org Unit relates to Student Only.</description>
        <inlineHelpText>Is this Org Unit relates to Student Only.</inlineHelpText>
        <label>Available for Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Org_Unit_Code__c</fullName>
        <description>VLE Course unique Code</description>
        <inlineHelpText>VLE Course unique Code</inlineHelpText>
        <label>Org Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Org_Unit_VLE_ID__c</fullName>
        <description>Organisation Wide Unit VLE ID</description>
        <inlineHelpText>Organisation Wide Unit VLE ID</inlineHelpText>
        <label>Org Unit VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Staff_Role_VLE_ID__c</fullName>
        <label>Staff Role VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>VLE Org Wide Units And Role Assignments</label><visibility>Public</visibility></CustomObject>